<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HelpActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/help_toolBar"
        app:title="@string/toolbar_help"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_whatsfcm"
                android:textSize="20sp"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="25dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_whatsfcm_description"
                android:textSize="16sp"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="25dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_user_guide"
                android:textSize="20sp"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="25dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_user_guide_1"
                android:textSize="16sp"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="25dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_user_guide_2"
                android:textSize="16sp"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="25dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_user_guide_3"
                android:textSize="16sp"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="25dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_user_guide_4"
                android:textSize="16sp"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_copyright_statement_google"
                android:textSize="12sp"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="25dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/gray"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>